# AutoBatchSamplePlugins

./: AutoBatchSamplePlugins.pro  CMakeLists.txt  README.md  abr-plugin-samples.pro
bufferedcopy/: CMakeLists.txt  bufferedcopy.cpp  bufferedcopy.h  bufferedcopy.pro  settingwidget.cpp  settingwidget.h
bufferedcopy/translation/: bufferedcopy_ja.qm
clitemplate/: CMakeLists.txt  clitemplate.cpp  clitemplate.h  clitemplate.json  clitemplate.pro  clitemplate_global.h
clitemplete/: CMakeLists.txt  clitemplete.cpp  clitemplete.h  clitemplete.json  clitemplete.pro  clitemplete_global.h
cmake/: plugininterface.cmake  productinfo.cmake
download/: CMakeLists.txt  download.cpp  download.h  download.json  download.pro  download_en_US.ts  download_global.h  downloadwidget.cpp  downloadwidget.h  downloadwidget.ui
filetextreplace/: CMakeLists.txt  filetextreplace.cpp  filetextreplace.h  filetextreplace.pro  filetextreplacewidget.cpp  filetextreplacewidget.h  filetextreplacewidget.ui
filetextreplace/translation/: filetextreplace_ja.qm
guitemplate/: CMakeLists.txt  guitemplate.cpp  guitemplate.h  guitemplate.json  guitemplate.pro  guitemplate_global.h  guitemplatewidget.cpp  guitemplatewidget.h  guitemplatewidget.ui
guitemplete/: CMakeLists.txt  guitemplete.cpp  guitemplete.h  guitemplete.json  guitemplete.pro  guitemplete_global.h  guitempletewidget.cpp  guitempletewidget.h  guitempletewidget.ui
helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.h  helloworld.json  helloworld.pro  helloworld_en_US.ts
makedirectory/: CMakeLists.txt  makedirectory.cpp  makedirectory.h  makedirectory.pro
makedirectory/translation/: makedirectory_ja.qm
removedirectory/: CMakeLists.txt  removedirectory.cpp  removedirectory.h  removedirectory.pro  removedirectorywidget.cpp  removedirectorywidget.h  removedirectorywidget.ui
removedirectory/translation/: removedirectory_ja.qm
sleep/: CMakeLists.txt  sleep.cpp  sleep.h  sleep.pro  sleepwidget.cpp  sleepwidget.h
sleep/translation/: sleep_ja.qm
takeline/: CMakeLists.txt  takeline.cpp  takeline.h  takeline.pro  takeline_global.h  takelinewidget.cpp  takelinewidget.h
takeline/translation/: takeline_ja.qm
testwindow/: CMakeLists.txt  dummytable.cpp  dummytable.h  main.cpp  receivelistdialog.cpp  receivelistdialog.h  receivelistdialog.ui  testwindow.cpp  testwindow.h  testwindow.pro  testwindow.ui
